--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,3 +1,9 @@
+$brand-primary: #337ab7;
+$brand-success: #5cb85c;
+$brand-info:    #5bc0de;
+$brand-warning: #f0ad4e;
+$brand-danger:  #d9534f;
+
 $cor-principal:            #3b5998; //rgb(0, 167, 156);
 $cor-principal-leve:       #5c78ab;
 $cor-principal-clara:      #6481bb;
@@ -494,7 +500,7 @@ span:focus, a:focus {
     height: auto;
     text-align: center;
     border: 1px solid $cor-principal-clara;
-    padding: 0px !important;
+    padding: 0 !important;
   }
 
   &:hover {
@@ -651,6 +657,19 @@ span:focus, a:focus {
   }
 }
 
+.popover {
+  padding: 0 !important;
+
+  .arrow {
+    padding: 0 !important;
+  }
+
+  h3 {
+    background-color: $cor-principal-clara;
+    color: white;
+  }
+}
+
 .modal {
   //margin-top: 100px;
 }
@@ -762,99 +781,99 @@ span:focus, a:focus {
   }
 }
 
-.filtros {
-  .well {
-    padding: 8px;
-    min-height: 50px;
-
-    > div {
-      //padding: 0;
-      //margin: 4px;
-      height: 45px;
-    }
-  }
-
-  .filtro-sm, .filtro-md, .filtro-lg {
-    display: inline-block;
-    padding: 4px;
-    margin: 4px;
-    background-color: $cor-principal;
-    border-radius: 6px;
-    width: 100%;
-
-    table {
-      width: 100%;
-      tr td {
-        &:last-child {
-          width: 30px;
-        }
-      }
-    }
-
-    i {
-      color: white;
-      margin-top: 4px;
-      vertical-align: sub;
-    }
-
-    input {
-      border-radius: 6px;
-      font-size: 1.2em;
-      border-color: transparent;
-      width: 100%;
-      text-align: center;
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
-  .filtro-sm {
-
-  }
-
-  .filtro-md {
-
-  }
-
-  .filtro-lg {
-    table tr td {
-      &:first-child {
-        width: 130px;
-        padding-right: 4px;
-      }
-
-      &:nth-child(2) {
-        padding-left: 4px;
-      }
-    }
-  }
-
-  .pedido {
-    background-color: #0086b3;
-  }
-
-  .vendedor {
-    background-color: goldenrod;
-  }
-
-  .cliente {
-    background-color: #006600;
-  }
-
-  .data-inicial {
-    background-color: orangered;
-  }
-
-  .data-final {
-    background-color: #880000;
-  }
-}
+//.filtros {
+//  .well {
+//    padding: 8px;
+//    min-height: 50px;
+//
+//    > div {
+//      //padding: 0;
+//      //margin: 4px;
+//      height: 45px;
+//    }
+//  }
+//
+//  .filtro-sm, .filtro-md, .filtro-lg {
+//    display: inline-block;
+//    padding: 4px;
+//    margin: 4px;
+//    background-color: $cor-principal;
+//    border-radius: 6px;
+//    width: 100%;
+//
+//    table {
+//      width: 100%;
+//      tr td {
+//        &:last-child {
+//          width: 30px;
+//        }
+//      }
+//    }
+//
+//    i {
+//      color: white;
+//      margin-top: 4px;
+//      vertical-align: sub;
+//    }
+//
+//    input {
+//      border-radius: 6px;
+//      font-size: 1.2em;
+//      border-color: transparent;
+//      width: 100%;
+//      text-align: center;
+//
+//      &:first-child {
+//        margin-left: 0;
+//      }
+//
+//      &:last-child {
+//        margin-right: 0;
+//      }
+//    }
+//  }
+//
+//  .filtro-sm {
+//
+//  }
+//
+//  .filtro-md {
+//
+//  }
+//
+//  .filtro-lg {
+//    table tr td {
+//      &:first-child {
+//        width: 130px;
+//        padding-right: 4px;
+//      }
+//
+//      &:nth-child(2) {
+//        padding-left: 4px;
+//      }
+//    }
+//  }
+//
+//  .pedido {
+//    background-color: #0086b3;
+//  }
+//
+//  .vendedor {
+//    background-color: goldenrod;
+//  }
+//
+//  .cliente {
+//    background-color: #006600;
+//  }
+//
+//  .data-inicial {
+//    background-color: orangered;
+//  }
+//
+//  .data-final {
+//    background-color: #880000;
+//  }
+//}
 
 .nav-tabs {
   li {
