--- a/app/views/impressao.html
+++ b/app/views/impressao.html
@@ -2,6 +2,9 @@
   body {
     background-color: white;
   }
-</style>
 
+  .impressao {
+    display: block;
+  }
+</style>
 <div ng-include="'partials/impressaoOrcamento.html'"></div>
