--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -6,32 +6,64 @@
     <br>
     <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'medium'}}</span>
   </div>
+
   <div class="info">
     <br>
     <table class="dados">
       <tr>
-        <td><h5>Cliente: </h5>({{orcamento.pedido.cliente.codigo}}) {{orcamento.pedido.cliente.nome}}</td>
-        <td><h5>CPF/CNPJ: </h5>{{orcamento.pedido.cliente.cpf || orcamento.pedido.cliente.cnpj}}</td>
-        <td><h5>Insc. Est.: </h5>{{orcamento.pedido.cliente.iEstadual}}</td>
-      </tr>
-      <tr>
-        <td><h5>Endereço: </h5>{{orcamento.pedido.cliente.endereco.logradouro}}
-          {{orcamento.pedido.cliente.endereco.numero}}
+        <td>
+          <h5>Cliente: </h5>
+          ({{orcamento.pedido.cliente.codigo}}) {{orcamento.pedido.cliente.nome}}
         </td>
-        <td><h5>Bairro: </h5>{{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}}
-          - {{orcamento.pedido.cliente.endereco.uf}}
+        <td>
+          <h5>CPF/CNPJ: </h5>
+          {{orcamento.pedido.cliente.cpf || orcamento.pedido.cliente.cnpj}}
         </td>
-        <td><h5>CEP: </h5>{{orcamento.pedido.cliente.endereco.cep}}</td>
+        <td>
+          <h5>Insc. Est.: </h5>
+          {{orcamento.pedido.cliente.iEstadual}}
+        </td>
       </tr>
       <tr>
-        <td><h5>Telefone: </h5>{{orcamento.pedido.cliente.endereco.ddd}} {{orcamento.pedido.cliente.telefone}}</td>
-        <td><h5>Celular: </h5>{{orcamento.pedido.cliente.celular}}</td>
-        <td><h5>email: </h5>{{orcamento.pedido.cliente.email}}</td>
+        <td>
+          <h5>Endereço: </h5>
+          {{orcamento.pedido.cliente.endereco.logradouro}} {{orcamento.pedido.cliente.endereco.numero}}
+        </td>
+        <td>
+          <h5>Bairro: </h5>
+          {{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}} - {{orcamento.pedido.cliente.endereco.uf}}
+        </td>
+        <td>
+          <h5>CEP: </h5>
+          {{orcamento.pedido.cliente.endereco.cep}}
+        </td>
       </tr>
       <tr>
-        <td><h5>Vendedor: </h5>({{orcamento.pedido.vendedor.codigo}}) {{orcamento.pedido.vendedor.nome}}</td>
-        <td><h5>Loja: </h5></td>
-        <td><h5>Data da emissão: </h5>{{orcamento.pedido.dataPedido | date: 'dd/MM/yyyy'}}</td>
+        <td>
+          <h5>Telefone: </h5>
+          {{orcamento.pedido.cliente.endereco.ddd}} {{orcamento.pedido.cliente.telefone}}
+        </td>
+        <td>
+          <h5>Celular: </h5>
+          {{orcamento.pedido.cliente.celular}}
+        </td>
+        <td>
+          <h5>email: </h5>
+          {{orcamento.pedido.cliente.email}}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h5>Vendedor: </h5>
+          ({{orcamento.pedido.vendedor.codigo}}) {{orcamento.pedido.vendedor.nome}}
+        </td>
+        <td>
+          <h5>Loja: </h5>
+        </td>
+        <td>
+          <h5>Data da emissão: </h5>
+          {{orcamento.pedido.dataPedido | date: 'medium'}}
+        </td>
       </tr>
     </table>
     <br>
@@ -47,39 +79,36 @@
         <br>
         <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'medium'}}</span>
       </div>
+
       <table class="tabela" ng-class="$index > 0 ? 'margem' : ''">
         <!--<thead>-->
-        <tr>
-          <th>CÓDIGO</th>
-          <th>DESCRIÇÃO</th>
-          <th>UND</th>
-          <th>QTD</th>
-          <th>PREÇO</th>
-          <th>TOTAL</th>
-        </tr>
+          <tr>
+            <th>CÓDIGO</th>
+            <th>DESCRIÇÃO</th>
+            <th>UND</th>
+            <th>QTD</th>
+            <th>PREÇO</th>
+            <th>TOTAL</th>
+          </tr>
         <!--</thead>-->
         <tbody>
-        <tr ng-repeat="i in bloco">
-          <td>{{i.produto.codigo}}</td>
-          <td>{{i.produto.nome | truncate: '60'}}</td>
-          <td>{{i.produto.unidade}}</td>
-          <td>{{i.quantidade}}</td>
-          <td>{{i.produto.preco | currency: 'R$ '}}</td>
-          <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
-        </tr>
+          <tr ng-repeat="i in bloco">
+            <td>{{i.produto.codigo}}</td>
+            <td>{{i.produto.nome | truncate: '60'}}</td>
+            <td>{{i.produto.unidade}}</td>
+            <td>{{i.quantidade}}</td>
+            <td>{{i.produto.preco | currency: 'R$ '}}</td>
+            <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
+          </tr>
         </tbody>
       </table>
-      <span
-        ng-init="max=orcamento.pedido.blocos.length==1?15:($index==0?15:($index+1>=orcamento.pedido.blocos.length?15:30))"></span>
 
-      <div class="espacador"
-           ng-repeat="n in getNumber(max - (bloco.length >= max ? max : bloco.length)) track by $index"></div>
+      <span ng-init="max=orcamento.pedido.blocos.length==1?15:($index==0?15:($index+1>=orcamento.pedido.blocos.length?15:30))"></span>
+      <div class="espacador" ng-repeat="n in getNumber(max - (bloco.length >= max ? max : bloco.length)) track by $index"></div>
 
-      <p
-        ng-class="{ 'quebra': $index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18 }"></p>
+      <p ng-class="{ 'quebra': $index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18 }"></p>
 
-      <div class="cabecalho"
-           ng-if="$index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18">
+      <div class="cabecalho" ng-if="$index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18">
         <div class="logo"><img src="./images/carrapeta.jpg" alt=""></div>
         <br>
         <h4 class="orcamento-identificacao">Orçamento n&#186;: {{orcamento.pedido.codigo}}</h4>
@@ -87,10 +116,10 @@
         <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'longDate'}}</span>
       </div>
     </div>
+
     <table class="totais">
       <tr>
-        <td><h5>Total de itens: </h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'ITENS' :
-          'ITEM'}}
+        <td><h5>Total de itens: </h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'ITENS' : 'ITEM'}}
         </td>
         <td>
           <h5>Valor Total: </h5>{{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}}<br>
@@ -99,8 +128,7 @@
         </td>
         <td>
           <h5>Pagamento:</h5>
-          <span
-            ng-repeat="p in orcamento.pedido.pagamentos"><br>{{p.modalidade.nome}} - {{p.valor | currency: 'R$ '}}</span>
+          <span ng-repeat="p in orcamento.pedido.pagamentos"><br>{{p.modalidade.nome}} - {{p.valor | currency: 'R$ '}}</span>
           <br>
           <h5>Total:</h5><br>{{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
         </td>
