--- a/app/partials/modalConfirm.html
+++ b/app/partials/modalConfirm.html
@@ -1,4 +1,4 @@
-<div class="meu-modal">
+<div class="meu-modal modal-confirm">
   <div class="header">
     <div class="title">
       <span class="glyphicon glyphicon-alert" style="font-size: .8em; vertical-align: 0;"></span> {{title || 'Aviso'}}
