--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -53,7 +53,7 @@ body.padding-bottom {
   width: 100%;
   margin: 0 auto; }
 
-.highlight, .navbar-default .navbar-nav > li:hover, .botao-menu:hover, .botao-menu-barra:hover, #formulario-orcamento .btn-orcamento:hover, .em-lote .btn-orcamento:hover, .atendimento .btn-orcamento:hover, .configuracoes .controle .botao:hover {
+.highlight, .navbar-default .navbar-nav > li:hover, .botao-menu:hover, .botao-menu-barra:hover, #formulario-orcamento .btn-orcamento:hover, .buscar-orcamento .btn-orcamento:hover, .em-lote .btn-orcamento:hover, .atendimento .btn-orcamento:hover, .configuracoes .controle .botao:hover {
   -webkit-transition: background-color 0.5s ease;
   -moz-transition: background-color 0.5s ease;
   -ms-transition: background-color 0.5s ease;
@@ -69,7 +69,7 @@ body.padding-bottom {
   -o-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease; }
 
-.sombra, .card, .navbar-default, .header-alternativo, .botao-menu, .botao-menu-barra, #formulario-orcamento .btn-orcamento, .em-lote .btn-orcamento, .atendimento .btn-orcamento, .configuracoes .controle {
+.sombra, .card, .navbar-default, .header-alternativo, .botao-menu, .botao-menu-barra, #formulario-orcamento .btn-orcamento, .buscar-orcamento .btn-orcamento, .em-lote .btn-orcamento, .atendimento .btn-orcamento, .configuracoes .controle {
   -webkit-box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35);
   -moz-box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35);
   box-shadow: 0 2px 4px rgba(50, 50, 50, 0.35); }
@@ -428,6 +428,9 @@ span:focus, a:focus {
     background-color: #6481bb;
     color: white; }
 
+.modal-confirm {
+  z-index: 1060 !important; }
+
 .meu-modal .header {
   background-color: #6481bb;
   height: 60px;
@@ -451,6 +454,8 @@ span:focus, a:focus {
     width: 100%; }
 .meu-modal .body.xs {
   height: 120px; }
+.meu-modal .body.xs-2 {
+  height: 240px; }
 .meu-modal .body.sm {
   height: 330px; }
 .meu-modal .body.md {
@@ -524,6 +529,17 @@ span:focus, a:focus {
   border-color: #5c78ab; }
   .pagination > .active > a:hover, .pagination > .active > a:focus {
     background-color: #3b5998; }
+
+.ui-select-multiple.ui-select-bootstrap.ui-select-container input.ui-select-search.ng-pristine.ng-untouched {
+  width: 100% !important; }
+
+.ui-select-multiple.ui-select-bootstrap.ui-select-container.ng-empty input.ui-select-search {
+  width: 100% !important; }
+
+.ui-select-multiple.ui-select-bootstrap input.ui-select-search:focus {
+  outline: none;
+  border: none;
+  box-shadow: none; }
 
 .banner {
   background-image: url("../images/logotipo.png");
@@ -772,7 +788,7 @@ div[name="footer"] .navbar {
   color: white; }
   .botao-menu span {
     font-size: 2em;
-    margin-bottom: 40px; }
+    margin-bottom: 10px; }
 
 .botao-menu-barra {
   width: 100%;
@@ -1046,6 +1062,27 @@ div[name="footer"] .navbar {
         float: right; }
   .opcoes .remove-padding > div {
     padding: 8px; }
+
+.buscar-orcamento {
+  margin-top: 40px;
+  margin-bottom: 40px; }
+  .buscar-orcamento .card .head, .buscar-orcamento .card #formulario-orcamento .main-head, #formulario-orcamento .buscar-orcamento .card .main-head {
+    padding: 6px;
+    margin: 0 -15px !important;
+    margin-bottom: 10px; }
+  .buscar-orcamento .btn-orcamento {
+    border: none;
+    background-color: #6481bb;
+    color: white;
+    width: 100%;
+    height: 60px;
+    font-size: 2em; }
+    .buscar-orcamento .btn-orcamento span {
+      vertical-align: -10%; }
+    .buscar-orcamento .btn-orcamento:hover {
+      text-decoration: none; }
+  .buscar-orcamento a.btn-orcamento {
+    padding: 10px; }
 
 .follow-up {
   margin-top: 40px;
