--- a/app/partials/dashboard/usuarios.html
+++ b/app/partials/dashboard/usuarios.html
@@ -59,7 +59,7 @@
     </tbody>
   </table>
   <div class="paginas">
-    <ul uib-pagination total-items="configuracoes.usuariosPagination.total" ng-model="configuracoes.usuariosPagination.current" max-size="configuracoes.usuariosPagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+    <ul uib-pagination total-items="configuracoes.usuariosPagination.total" ng-model="configuracoes.usuariosPagination.current" max-size="5" items-per-page="configuracoes.usuariosPagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="false" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
   </div>
 </div>
 <!--FIM USUARIOS-->
