--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -168,6 +168,15 @@
     }
   }
 
+  .modal {
+    .parecer {
+      .well {
+        overflow-y: scroll;
+        margin: 0;
+      }
+    }
+  }
+
   .status {
     margin-top: 14px;
 
