--- a/app/views/followUpEmLote.html
+++ b/app/views/followUpEmLote.html
@@ -150,7 +150,7 @@
       </div>
     </div>
     <div class="paginas">
-      <ul uib-pagination total-items="emLote.pagination.total" ng-model="emLote.pagination.current" max-size="emLote.pagination.max" ng-change="emLote.pagination.mudarPagina()" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+      <ul uib-pagination total-items="emLote.pagination.total" ng-model="emLote.pagination.current" max-size="5" items-per-page="emLote.pagination.max" ng-change="emLote.pagination.mudarPagina()" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
   </div>
 
