--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="paginas">
-        <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="pagination.max" ng-change="pagination.mudarPagina()" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+        <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="5" items-per-page="pagination.max" ng-change="pagination.mudarPagina()" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
       </div>
     </div>
 
