--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -59,6 +59,7 @@
         </td>
         <td>
           <h5>Loja: </h5>
+          {{orcamento.pedido.loja.shop_name}}
         </td>
         <td>
           <h5>Data da emissão: </h5>
