--- a/app/partials/modalBuscarProduto.html
+++ b/app/partials/modalBuscarProduto.html
@@ -1,4 +1,4 @@
-ta<div class="meu-modal">
+<div class="meu-modal">
 
   <div class="header">
     <div class="title"><span class="glyphicon glyphicon-tags"></span>&nbsp; Buscar Produto <span
