--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -211,7 +211,7 @@
     }
   }
 
-  #modal-parecer-completo, #modal-parecer-final {
+  #modal-parecer-completo {
     .body div {
       height: 100%;
 
@@ -228,7 +228,7 @@
 
   #modal-parecer-final {
     .body.sm {
-      height: 200px;
+      height: 370px;
     }
   }
 }
