--- a/app/partials/opcoesOrcamentoSalvo.html
+++ b/app/partials/opcoesOrcamentoSalvo.html
@@ -3,7 +3,7 @@
     <div class="header">
       <span class="glyphicon glyphicon-ok"></span>
       Orçamento salvo!
-      <span class="glyphicon glyphicon-remove close" ng-click="ocultarOpcoes()"></span>
+      <span class="glyphicon glyphicon-remove close" ng-click="ocultarOpcoes(true)"></span>
     </div>
     <div class="body">
       <h2>Código: {{orcamento.pedido.codigo}}</h2>
@@ -13,9 +13,14 @@
       <br>
       <br>
       <button class="btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope"></span> Email</button>
+      <br>
+      <br>
+      <button class="btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">
+        <span class="glyphicon glyphicon-share-alt"></span> Exportar
+      </button>
     </div>
     <div class="footer">
-      <button class="btn btn-default" ng-click="ocultarOpcoes()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
+      <button class="btn btn-default" ng-click="ocultarOpcoes(true)"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
     </div>
   </div>
 </div>
