--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,34 +1,21 @@
 <div id="formulario-orcamento" class="container">
 
   <div class="row" ng-if="orcamento.pedido.erp">
-    <p class="alert alert-success text-center" role="alert">Orçamento já exportado! Código ERP: {{orcamento.pedido.erp}}</p>
+    <p class="alert alert-success alert-exportado text-center" role="alert">
+      <span class="glyphicon glyphicon-ok"></span>
+      Orçamento exportado! Código ERP: <b>{{orcamento.pedido.erp}}</b> Código NFE: <b>{{orcamento.pedido.nfe}}</b>
+    </p>
   </div>
 
-  <!--<div class="row">-->
-    <!--<div class="col-sm-6 col-md-3">-->
-    <!--<button class="btn btn-orcamento" ng-click="orcamento.limpar(true)"><span class="glyphicon glyphicon-pencil"></span> Novo</button>-->
-    <!--</div>-->
-    <!--<div class="col-sm-6 col-md-3 col-md-push-6">-->
-    <!--<button class="btn btn-orcamento" ng-click="lista()"><span class="glyphicon glyphicon-list-alt"></span> Recuperar</button>-->
-    <!--</div>-->
-    <!--<div class="col-sm-6 col-md-3">-->
-    <!--<button class="btn btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print"></span> Imprimir</button>-->
-    <!--</div>-->
-    <!--<div class="col-sm-6 col-md-3">-->
-    <!--<button class="btn btn-orcamento" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span> Excluir</button>-->
-    <!--</div>-->
-  <!--</div>-->
-
   <!--TITULO-->
-  <!--<br>-->
   <div class="row card">
     <div class="col-md-12">
       <div class="main-head" style="text-align: center">
         <h3>
           <span class="glyphicon glyphicon-shopping-cart"></span>
-          <span
-            class="hidden-xs">{{orcamento.pedido.codigo ? ('Orçamento código ' + orcamento.pedido.codigo) : ''}}</span>
-          <span class="hidden-xs">{{orcamento.pedido.codigo ? ('criado em ' + (orcamento.pedido.dataPedido | date:'dd/MM/yyyy')) : ''}}</span>
+          <span class="hidden-xs">{{orcamento.pedido.codigo ? ('Código ' + orcamento.pedido.codigo) : ''}}</span>
+          <span class="hidden-xs">{{orcamento.pedido.codigo ? ('- ' + (orcamento.pedido.dataPedido | date:'dd/MM/yyyy')) : ''}}</span>
+          <span class="hidden-xs">{{orcamento.pedido.loja ? ('- ' + (orcamento.pedido.loja.shop_name)) : ''}}</span>
           <span class="visible-xs-inline">{{orcamento.pedido.codigo ? (orcamento.pedido.codigo) : ''}}</span>
           <span class="visible-xs-inline">{{orcamento.pedido.codigo ? (orcamento.pedido.dataPedido | date:'dd/MM/yyyy') : ''}}</span>
           {{orcamento.pedido.codigo ? '' : 'Novo Orçamento'}}
@@ -36,7 +23,6 @@
         </h3>
       </div>
     </div>
-    <!--<span uib-collapse="!orcamento.pedido.codigo">-->
     <br class="visible-xs-block">
     <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.limpar(true)">
@@ -48,30 +34,30 @@
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.abrirAtendimento()"><span
-        class="glyphicon glyphicon-list-alt hidden-xs"></span> Atendimento
+      <button class="btn btn-orcamento" ng-click="orcamento.abrirAtendimento()" ng-disabled="orcamento.pedido.erp">
+        <span class="glyphicon glyphicon-list-alt hidden-xs"></span> Atendimento
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento danger" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash hidden-xs"></span>
+      <button class="btn btn-orcamento danger" ng-click="orcamento.excluir()" ng-disabled="orcamento.pedido.erp"><span class="glyphicon glyphicon-trash hidden-xs"></span>
         Excluir
       </button>
     </div>
-    <!--</span>-->
   </div>
 
   <!--VENDEDOR-->
   <br>
   <div class="row card">
-    <div id="form-vendedor" class="col-md-12" ng-init="formularios.vendedor = false"
-         ng-click="formularios.vendedor = !formularios.vendedor; scrollTo($event);">
+    <div id="form-vendedor" class="col-md-12" ng-init="formularios.vendedor = false" ng-click="formularios.vendedor = !formularios.vendedor; scrollTo($event);">
       <div class="head">
         <h3>Vendedor
-          <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo;
-            ({{orcamento.pedido.vendedor.codigo}}) <span
-              class="hidden-xs">- {{orcamento.pedido.vendedor.nome}}</span></span>
-          <a href="" class="limpar" ng-click="orcamento.limparVendedor($event)" uib-tooltip="Limpar campos"
-             tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
+          <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome">
+            &raquo; ({{orcamento.pedido.vendedor.codigo}})
+            <span class="hidden-xs">- {{orcamento.pedido.vendedor.nome}}</span>
+          </span>
+          <a href="" class="limpar" ng-click="orcamento.limparVendedor($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-erase"></span>
+          </a>
           <a href=""><span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -86,8 +72,9 @@
                  enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" shift-enter="orcamento.escapeVendedor()"
                  f1="orcamento.buscaVendedorPorCodigo()" uib-tooltip="Use F1 para buscar" tooltip-append-to-body="true">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo()"><span
-              class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo()">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
           </span>
         </span>
       </div>
@@ -214,17 +201,19 @@
           <td>{{i.produto.codigo}}</td>
           <td>{{i.produto.nome | limitTo : 50 }}</td>
           <td>{{i.produto.unidade}}</td>
-          <td class="editable-elem" editable-elem>
+          <td class="editable-elem" editable-elem ng-if="!orcamento.pedido.erp">
             <span>{{i.quantidade | currency : ""}}</span>
-            <input currency symbol="''" n
-                   umber-only type="text" ng-model="i.quantidade" ng-blur="i.quantidade <= 0 || !i.quantidade ? i.quantidade = 1 : ''">
+            <input currency symbol="''" number-only type="text" ng-model="i.quantidade" ng-blur="i.quantidade <= 0 || !i.quantidade ? i.quantidade = 1 : ''">
+          </td>
+          <td ng-if="orcamento.pedido.erp">
+            <span>{{i.quantidade | currency : ""}}</span>
           </td>
           <td>{{i.produto.preco | currency}}</td>
           <td><span>{{i.descontoPercent | currency : ""}}%</span></td>
           <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span></td>
           <td>{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
           <td>
-            <a tabindex="-1" confirm-popup title="Aviso" message="Deseja remover o item?" ok-func="orcamento.removerItem(i)" placement="left">
+            <a tabindex="-1" confirm-popup title="Aviso" message="Deseja remover o item?" ok-func="orcamento.removerItem(i)" placement="left" ng-if="!orcamento.pedido.erp">
               <span class="glyphicon glyphicon-trash"></span>
             </a>
           </td>
@@ -245,8 +234,8 @@
             <td data-label="valor unitário">{{i.produto.preco | currency: 'R$ '}}</td>
             <td data-label="total">{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
             <td>
-              <button class="btn btn-default pull-right" tabindex="-1" ng-click="orcamento.removerItem(i)"><span
-                class="glyphicon glyphicon-remove"></span> Remover
+              <button class="btn btn-default pull-right" tabindex="-1" ng-click="orcamento.removerItem(i)" ng-hide="orcamento.pedido.erp">
+                <span class="glyphicon glyphicon-remove"></span> Remover
               </button>
             </td>
           </tr>
@@ -305,8 +294,8 @@
                  uib-tooltip="Use F1 para buscar" tooltip-append-to-body="true">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()"
-                    ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span
+                    ng-disabled="cliente.novo || orcamento.pedido.erp"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo || orcamento.pedido.erp"><span
               class="glyphicon glyphicon-plus"></span></button>
           </span>
         </span>
@@ -496,10 +485,9 @@
     </div>
     <!--<span uib-collapse="!orcamento.pedido.codigo">-->
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.pagamento()"><span class="glyphicon glyphicon-credit-card hidden-xs"></span> Pagamento</button>
-      <!--<button class="btn btn-orcamento" data-toggle="modal" data-target="#modalObs"><span-->
-        <!--class="glyphicon glyphicon-edit hidden-xs"></span> Observações-->
-      <!--</button>-->
+      <button class="btn btn-orcamento" ng-click="orcamento.pagamento()" ng-disabled="orcamento.pedido.erp">
+        <span class="glyphicon glyphicon-credit-card hidden-xs"></span> Pagamento
+      </button>
     </div>
     <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope hidden-xs"></span>
@@ -523,7 +511,8 @@
     <!--</span>-->
   </div>
 
-  <div ng-include="'partials/opcoesOrcamento.html'" class="opcoes"></div>
+  <div ng-include="'partials/opcoesOrcamentoSalvo.html'" class="opcoes salvo"></div>
+  <div ng-include="'partials/opcoesOrcamentoExportado.html'" class="opcoes exportado"></div>
 
 </div>
 
