--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -63,7 +63,9 @@
         </div>
         <div class="hidden-xs col-md-2">
           <h4>Status</h4>
-          <input type="text" class="form-control" readonly="true">
+          <select class="form-control" ng-options="s.id as s.nome for s in statusArray" ng-model="statusId">
+            <option value="">Todos</option>
+          </select>
         </div>
         <div class="col-xs-6 col-md-2">
           <h4>&nbsp;</h4>
