--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -228,3 +228,15 @@
     margin-right: 20px;
   }
 }
+
+#modalSenha {
+  &.meu-modal {
+    .modal-dialog.modal-sm {
+      width: 340px;
+
+      .body.sm {
+        height: 200px !important;
+      }
+    }
+  }
+}
