--- a/app/views/buscarPedido.html
+++ b/app/views/buscarPedido.html
@@ -51,7 +51,9 @@
         </div>
         <div class="col-md-2">
           <h4>Status</h4>
-          <input type="text" class="form-control" placeholder="" readonly>
+          <select class="form-control" ng-options="s.id as s.nome for s in statusArray" ng-model="busca.filtro.statusId">
+            <option value="">Todos</option>
+          </select>
         </div>
         <div class="col-md-2">
           <h4>Inicial</h4>
@@ -116,6 +118,7 @@
             <th>Vendedor</th>
             <th>Data</th>
             <th>Total</th>
+            <th>Status</th>
             <th>&nbsp;</th>
           </thead>
           <tbody>
@@ -125,9 +128,11 @@
               <td data-label="Vendedor">{{p.pedido.vendedor.nome}}</td>
               <td data-label="Data">{{p.pedido.dataPedido | date: 'short'}}</td>
               <td data-label="Total">{{p.pedido.valor | currency:'R$ '}}</td>
+              <td data-label="Status">{{getStatusName(p.pedido.idStatus)}}</td>
               <td><a ng-href="#/orcamento/edit?code={{p.pedido.codigo}}"><span class="glyphicon glyphicon-open"></span></a></td>
             </tr>
             <tr class="hidden-xs" ng-repeat="n in getNumber(busca.pagination.max > busca.pedidos.length ? busca.pagination.max - busca.pedidos.length : 0) track by $index">
+              <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
