--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -10,7 +10,7 @@
   <!--TITULO-->
   <div class="row card">
     <div class="col-md-12">
-      <div class="main-head" style="text-align: center">
+      <div class="main-head text-center">
         <h3>
           <span class="glyphicon glyphicon-shopping-cart"></span>
           <span class="hidden-xs">{{orcamento.pedido.codigo ? ('Código ' + orcamento.pedido.codigo) : ''}}</span>
@@ -30,7 +30,7 @@
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="lista()"><span class="glyphicon glyphicon-open hidden-xs"></span> Recuperar
+      <button class="btn btn-orcamento" ng-click="buscarOrcamento()"><span class="glyphicon glyphicon-open hidden-xs"></span> Recuperar
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
@@ -88,17 +88,22 @@
   <!--PRODUTOS-->
   <br class="hidden-xs">
   <div class="row card">
-    <div id="form-produtos" class="col-md-12" ng-init="formularios.produtos = true"
-         ng-click="formularios.produtos = !formularios.produtos; scrollTo($event);">
+    <div id="form-produtos" class="col-md-12" ng-init="formularios.produtos = true" ng-click="formularios.produtos = !formularios.produtos; scrollTo($event);">
       <div class="head">
         <h3>Produtos
-          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo;
-            {{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} <span
-              class="hidden-xs">- Total: {{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}}</span></span>
-          <a href="" class="limpar" ng-click="orcamento.limparProdutos($event)" uib-tooltip="Limpar campos"
-             tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
-          <a href=""><span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span></a>
-          <a href=""><span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span></a>
+          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0">
+            &raquo; {{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}}
+            <span class="hidden-xs">- Total: {{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}}</span>
+          </span>
+          <a href="" class="limpar" ng-click="orcamento.limparProdutos($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-erase"></span>
+          </a>
+          <a href="">
+            <span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span>
+          </a>
+          <a href="">
+            <span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span>
+          </a>
         </h3>
       </div>
     </div>
@@ -113,8 +118,8 @@
       </div>
       <div class="visible-xs-inline-block col-xs-5">
         <h4>&nbsp;</h4>
-        <button class="btn btn-default btn-block" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span
-          class="glyphicon glyphicon-search"></span> Buscar
+        <button class="btn btn-default btn-block" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)">
+          <span class="glyphicon glyphicon-search"></span> Buscar
         </button>
       </div>
       <div class="col-xs-12 col-sm-6">
@@ -135,8 +140,7 @@
         <h4>Valor unitário</h4>
         <span class="input-group">
           <span class="input-group-addon">R$</span>
-          <input type="text" class="form-control" readonly="true" tabindex="-1"
-                 ng-value="item.produto.preco | currency: ''">
+          <input type="text" class="form-control" readonly="true" tabindex="-1" ng-value="item.produto.preco | currency: ''">
         </span>
       </div>
       <div class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-0">
@@ -175,8 +179,7 @@
         <h4>Total</h4>
         <span class="input-group">
           <span class="input-group-addon">R$</span>
-          <input type="text" class="form-control" readonly="true" tabindex="-1"
-                 ng-value="item.getTotalComDesconto() | currency: ''">
+          <input type="text" class="form-control" readonly="true" tabindex="-1" ng-value="item.getTotalComDesconto() | currency: ''">
         </span>
       </div>
     </div>
@@ -221,8 +224,7 @@
         </tbody>
       </table>
     </div>
-    <div class="col-xs-12 visible-xs-block" uib-collapse="!formularios.produtos"
-         ng-show="orcamento.pedido.items.length">
+    <div class="col-xs-12 visible-xs-block" uib-collapse="!formularios.produtos" ng-show="orcamento.pedido.items.length">
       <div style="max-height: 300px;overflow-y: auto" class="well">
         <table class="tabela tabela-bordered tabela-esticada">
           <tbody>
@@ -270,16 +272,22 @@
   <!--CLIENTE-->
   <br class="hidden-xs">
   <div class="row card">
-    <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true"
-         ng-click="formularios.cliente = !formularios.cliente; scrollTo($event);">
+    <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true" ng-click="formularios.cliente = !formularios.cliente; scrollTo($event);">
       <div class="head">
         <h3>Cliente
-          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}}) <span
-            class="hidden-xs">- {{orcamento.pedido.cliente.nome}})</span></span>
-          <a href="" class="limpar" ng-click="orcamento.limparCliente($event)" uib-tooltip="Limpar campos"
-             tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
-          <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
-          <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
+          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome">
+            &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}})
+            <span class="hidden-xs">- {{orcamento.pedido.cliente.nome}})</span>
+          </span>
+          <a href="" class="limpar" ng-click="orcamento.limparCliente($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-erase"></span>
+          </a>
+          <a href="">
+            <span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span>
+          </a>
+          <a href="">
+            <span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span>
+          </a>
         </h3>
       </div>
     </div>
@@ -293,10 +301,12 @@
                  f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6"
                  uib-tooltip="Use F1 para buscar" tooltip-append-to-body="true">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()"
-                    ng-disabled="cliente.novo || orcamento.pedido.erp"><span class="glyphicon glyphicon-search"></span></button>
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo || orcamento.pedido.erp"><span
-              class="glyphicon glyphicon-plus"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()" ng-disabled="cliente.novo || orcamento.pedido.erp">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo || orcamento.pedido.erp">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
           </span>
         </span>
       </div>
@@ -347,8 +357,9 @@
                    ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()" uib-tooltip="Use F1 para buscar"
                    tooltip-append-to-body="true">
             <span class="input-group-btn" ng-hide="!cliente.novo">
-              <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP(true)"><span
-                class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP(true)">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
             </span>
           </span>
         </div>
@@ -360,8 +371,7 @@
       <div class="col-xs-12 col-sm-6" style="padding: 0">
         <div class="col-xs-9 col-sm-9">
           <h4>Logradouro</h4>
-          <input type="text" class="form-control" ng-readonly="true"
-                 ng-value="orcamento.pedido.cliente.endereco.logradouro">
+          <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.logradouro">
         </div>
         <div class="col-xs-3 col-sm-3">
           <!--NUMERO-->
@@ -439,15 +449,20 @@
       <div class="head">
         <h3>Observações
           <span ng-if="!formularios.observacoes"></span>
-          <a href="" class="limpar" ng-click="orcamento.limparPagamento($event)" uib-tooltip="Limpar campos"
-             tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
-          <a href=""><span ng-if="formularios.observacoes" class="glyphicon glyphicon-menu-up"></span></a>
-          <a href=""><span ng-if="!formularios.observacoes" class="glyphicon glyphicon-menu-down"></span></a>
+          <a href="" class="limpar" ng-click="orcamento.limparPagamento($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true">
+            <span class="glyphicon glyphicon-erase"></span>
+          </a>
+          <a href="">
+            <span ng-if="formularios.observacoes" class="glyphicon glyphicon-menu-up"></span>
+          </a>
+          <a href="">
+            <span ng-if="!formularios.observacoes" class="glyphicon glyphicon-menu-down"></span>
+          </a>
         </h3>
       </div>
     </div>
     <div class="col-xs-12" uib-collapse="!formularios.observacoes">
-      <textarea name="obs" cols="30" rows="10" class="form-control" ng-model="orcamento.pedido.observacoes"></textarea>
+      <textarea name="obs" cols="30" rows="10" class="form-control" ng-model="orcamento.pedido.observacoes" keys-shortcuts shift-enter="orcamento.pagamento()"></textarea>
     </div>
   </div>
 
@@ -456,20 +471,27 @@
     <div class="col-md-12">
       <div class="col-xs-3 col-sm-3">
         <h4>Vendedor</h4>
-        <h5 ng-show="orcamento.pedido.vendedor.codigo">{{orcamento.pedido.vendedor.codigo}} -
-          {{orcamento.pedido.vendedor.nome}}</h5>
-        <h5 ng-hide="orcamento.pedido.vendedor.codigo">(Nenhum vendedor)</h5>
+        <h5 ng-show="orcamento.pedido.vendedor.codigo">
+          {{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}}
+        </h5>
+        <h5 ng-hide="orcamento.pedido.vendedor.codigo">
+          (Nenhum vendedor)
+        </h5>
       </div>
       <div class="col-xs-3 col-sm-3">
         <h4>Produtos</h4>
-        <h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} - Total:
-          {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}</h5>
+        <h5>
+          {{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} - Total: {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
+        </h5>
       </div>
       <div class="col-xs-3 col-sm-3">
         <h4>Cliente</h4>
-        <h5 ng-show="orcamento.pedido.cliente.codigo">{{orcamento.pedido.cliente.codigo}} -
-          {{orcamento.pedido.cliente.nome}}</h5>
-        <h5 ng-hide="orcamento.pedido.cliente.codigo">(Nenhum cliente)</h5>
+        <h5 ng-show="orcamento.pedido.cliente.codigo">
+          {{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}}
+        </h5>
+        <h5 ng-hide="orcamento.pedido.cliente.codigo">
+          (Nenhum cliente)
+        </h5>
       </div>
       <div class="col-xs-3 col-sm-3">
         <h4>Pagamento</h4>
@@ -479,19 +501,22 @@
             <!--{{p.modalidade.nome}} - {{p.valor | currency: 'R$ '}}<br>-->
           <!--</span>-->
         <!--</h5>-->
-        <h5 ng-show="orcamento.pedido.pagamentos.length">{{orcamento.pedido.pagamentos[0].modalidade.nome}} - {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}</h5>
-        <h5 ng-hide="orcamento.pedido.pagamentos.length">(Nenhuma forma de pagamento)</h5>
+        <h5 ng-show="orcamento.pedido.pagamentos.length">
+          {{orcamento.pedido.pagamentos[0].modalidade.nome}} - {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
+        </h5>
+        <h5 ng-hide="orcamento.pedido.pagamentos.length">
+          (Nenhuma forma de pagamento)
+        </h5>
       </div>
     </div>
-    <!--<span uib-collapse="!orcamento.pedido.codigo">-->
     <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.pagamento()" ng-disabled="orcamento.pedido.erp">
         <span class="glyphicon glyphicon-credit-card hidden-xs"></span> Pagamento
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope hidden-xs"></span>
-        Email
+      <button class="btn btn-orcamento" ng-click="orcamento.enviar()">
+        <span class="glyphicon glyphicon-envelope hidden-xs"></span> Email
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
@@ -500,15 +525,10 @@
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
-      <!--<button class="btn btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print hidden-xs"></span>-->
-      <!--Imprimir-->
-      <!--</button>-->
       <button class="btn btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">
-        <span class="glyphicon glyphicon-share-alt hidden-xs"></span>
-        Exportar
+        <span class="glyphicon glyphicon-share-alt hidden-xs"></span> Exportar
       </button>
     </div>
-    <!--</span>-->
   </div>
 
   <div ng-include="'partials/opcoesOrcamentoSalvo.html'" class="opcoes salvo"></div>
@@ -521,15 +541,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="header">
-        <div class="title"><span class="glyphicon glyphicon-pencil"></span> Observações <span
-          class="glyphicon glyphicon-remove close" data-dismiss="modal"></span></div>
+        <div class="title">
+          <span class="glyphicon glyphicon-pencil"></span> Observações <span class="glyphicon glyphicon-remove close" data-dismiss="modal"></span>
+        </div>
       </div>
       <div class="body" style="height: 244px">
         <textarea cols="30" rows="10" class="form-control"></textarea>
       </div>
       <div class="footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"><span
-          class="glyphicon glyphicon-remove"></span> Fechar
+        <button type="button" class="btn btn-default" data-dismiss="modal">
+          <span class="glyphicon glyphicon-remove"></span> Fechar
         </button>
       </div>
     </div>
@@ -541,20 +562,21 @@
      ng-hide="!orcamento.pedido.id || !orcamento.pedido.codigo || (backup ? !backup.compare(orcamento.pedido) : false)"></div>
 <h1 class="impressao aviso"
     ng-show="!orcamento.pedido.id || !orcamento.pedido.codigo || (backup ? !backup.compare(orcamento.pedido) : false)">
-  <span class="glyphicon glyphicon-alert"></span> Impressão indisponível</h1>
+  <span class="glyphicon glyphicon-alert"></span> Impressão indisponível
+</h1>
 
 <!--MODAL EMAIL-->
 <div class="modal meu-modal fade" id="modalEmail" tabindex="-1" role="dialog" aria-labelledby="modalEmail" ng-init="enderecoEmail = orcamento.pedido.cliente.email">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="header clearfix">
-        <div class="title"><span class="glyphicon glyphicon-envelope"></span> Enviar orçamento <span
-          class="glyphicon glyphicon-remove close" data-dismiss="modal"></span></div>
+        <div class="title">
+          <span class="glyphicon glyphicon-envelope"></span> Enviar orçamento <span class="glyphicon glyphicon-remove close" data-dismiss="modal"></span>
+        </div>
       </div>
       <div class="body xs-2 condensar-rows">
         <div class="col-md-12">
           <h4>Endereço</h4>
-          <!--<input type="email" class="form-control" ng-model="enderecoEmail">-->
           <ui-select multiple tagging="orcamento.emailExterno" limit="10" sortable="true" search-enabled="orcamento.emails.length < 10" ng-model="orcamento.emails">
             <ui-select-match placeholder="Informe os emails">{{$item.nome}} &lt;{{$item.email}}&gt;</ui-select-match>
             <ui-select-choices repeat="c in orcamento.contatos | filter: {nome: $select.search, email: $select.search}">
@@ -570,7 +592,9 @@
         </div>
       </div>
       <div class="footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">
+          <span class="glyphicon glyphicon-remove"></span> Cancelar
+        </button>
         <button type="button" class="btn btn-default" ng-click="orcamento.enviarEmail(enderecoEmail)" data-dismiss="modal">
           <span class="glyphicon glyphicon-envelope"></span> Enviar
         </button>
